Updated the file path

--- a/analysis_report.Rmd
+++ b/analysis_report.Rmd
@@ -22,7 +22,7 @@ library(reshape2)
 # Load the data set from the Excel file
 
 ```{r}
-AAPL_2020_2021 <- read_excel("C:/Users/nira0376/OneDrive - University of Idaho/Semester 6/CS 479/AAPL_2020-2021.xlsx") 
+AAPL_2020_2021 <- read_excel("/AAPL_2020-2021.xlsx") 
 ```
 
 # Convert the 'Date' column to Date format
